<resources>
    <string name="app_name">PlannerApp</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="module_number">Module Number</string>
    <string name="module_name">Module Name</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="assignment_number">Assignment Number</string>
    <string name="assignment_details">Assignment Details</string>
    <string name="due_date">Due Date:</string>
    <string name="due_year">yyyy</string>
    <string name="due_month">mm</string>
    <string name="due_day">dd</string>
    <string name="add_module">Add Module</string>
    <string name="note_title">Note Title</string>
    <string name="note_contents">Note Contents</string>
    <string name="add_note">Add Note</string>
    <string name="welcome_message">Welcome to the Planner app, feel free to add all of your modules and corresponding assignments along with any notes you wish to keep track of.</string>
    <string name="upcoming_assignments">Upcoming Assignments</string>
    <string name="assignments">Assignments</string>
    <string name="delete_module">Delete Module</string>
    <string name="update_assignment">Update Assignment</string>
    <string name="delete_assignment">Delete Assignment</string>
    <string name="update_note">Update Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="note_button">Note Title\n\nNote Contents</string>
    <string name="assignment_button">Assignment Number - Assignment Details \n\nDue Date</string>
    <string name="home_assignment">Module Number\n\nAssignment Number - Assignment Details</string>
    <string name="bank_holiday_title">Bank Holidays over the next 365 days</string>
</resources>